--- a/index.html
+++ b/index.html
@@ -25,6 +25,37 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <style>
+        body{
+            margin:0;
+            padding:0;
+            background-color:black;
+        }
+        .header
+        {
+            width:100%;
+            height:80px;
+        }
+        .header-1
+        {
+            width:100%;
+            height:60%;
+            background-color:white;
+        }
+        .header-2
+        {
+            width:100%;
+            height:40%;
+            background-color:rgba(247, 218, 6, 0.897);
+            color:white;
+        }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+        <!--HEADRES AND LOGO    -->
+    <div class="header-1"></div>
+    <div class="header-2"></div>
+    </div>
+  </body>
 </html>
