--- a/index.html
+++ b/index.html
@@ -26,36 +26,95 @@
       crossorigin="anonymous"
     ></script>
     <style>
-        body{
-            margin:0;
-            padding:0;
-            background-color:black;
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: black;
+      }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      .header {
+        width: 100%;
+        height:100vh;
+      }
+      .header-1 {
+        width: 100%;
+        height:40px;
+        background-color: white;
+      }
+      .header-2 {
+        width: 100%;
+        height:40px;
+        background-color: rgba(247, 218, 6, 0.897);
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .navbar {
+        display: flex;
+        align-items: center;
+      }
+      .navbar ul {
+        display: flex;
+
+        gap: 10vw;
+      }
+      .navbar li {
+        display: flex;
+        padding-top: 10px;
+        font-size: 18px;
+        font-weight: 600;
+      }
+      /*mobile*/
+      @media (max-width: 600px) {
+        .header-2 {
+          display:block;
+          height:100%;
+          width:35%;
+          margin-right:0 auto;
         }
-        .header
-        {
-            width:100%;
-            height:80px;
+        .navbar {
+          display: flex;
+          justify-content:center;
         }
-        .header-1
-        {
-            width:100%;
-            height:60%;
-            background-color:white;
+        .navbar ul {
+          display: flex;
+          flex-direction: column;
+          gap:10vh;
+          margin-top:25px;
         }
-        .header-2
-        {
-            width:100%;
-            height:40%;
-            background-color:rgba(247, 218, 6, 0.897);
-            color:white;
+      }
+      /*tablet*/
+      @media (min-width: 601px) and (max-width: 800px) {
+        .navbar ul {
+          gap: 5vw;
         }
+      }
     </style>
   </head>
   <body>
+      <div class="header-1"></div>
     <div class="header">
-        <!--HEADRES AND LOGO    -->
-    <div class="header-1"></div>
-    <div class="header-2"></div>
+      <!--HEADRES AND LOGO    -->
+      <div class="header-2">
+        <!--Desktop Nav-->
+        <nav class="navbar">
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Service</li>
+            <li>Project</li>
+            <li>Blog</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+        <!--
+        -->
+        <nav></nav>
+      </div>
     </div>
   </body>
 </html>
