--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
       }
       .header {
         width: 100%;
-        height:100vh;
+        height: 100vh;
       }
       .header-1 {
         width: 100%;
-        height:40px;
+        height: 40px;
         background-color: white;
+        display: flex;
+        align-items: center;
       }
       .header-2 {
         width: 100%;
-        height:40px;
+        height: 40px;
         background-color: rgba(247, 218, 6, 0.897);
         color: white;
         display: flex;
@@ -62,6 +64,10 @@
 
         gap: 10vw;
       }
+      #hamburger-menu {
+        height: 35px;
+        margin-left: 25px;
+      }
       .navbar li {
         display: flex;
         padding-top: 10px;
@@ -71,20 +77,20 @@
       /*mobile*/
       @media (max-width: 600px) {
         .header-2 {
-          display:block;
-          height:100%;
-          width:35%;
-          margin-right:0 auto;
+          display: none;
+          height: 100%;
+          width: 35%;
+          margin-right: 0 auto;
         }
         .navbar {
           display: flex;
-          justify-content:center;
+          justify-content: center;
         }
         .navbar ul {
           display: flex;
           flex-direction: column;
-          gap:10vh;
-          margin-top:25px;
+          gap: 10vh;
+          margin-top: 25px;
         }
       }
       /*tablet*/
@@ -92,14 +98,29 @@
         .navbar ul {
           gap: 5vw;
         }
+        #hamburger-menu {
+          display: none;
+        }
+      }
+      @media (min-width: 801px) and (max-width: 2000px) {
+        #hamburger-menu {
+          display: none;
+        }
       }
     </style>
   </head>
   <body>
-      <div class="header-1"></div>
+    <div class="header-1">
+      <img
+        src="./images/menus.png"
+        id="hamburger-menu"
+        onclick="hamMenu()"
+        alt="manu-button"
+      />
+    </div>
     <div class="header">
       <!--HEADRES AND LOGO    -->
-      <div class="header-2">
+      <div class="header-2" id="hamburgerNav">
         <!--Desktop Nav-->
         <nav class="navbar">
           <ul>
@@ -111,10 +132,21 @@
             <li>Contact</li>
           </ul>
         </nav>
-        <!--
-        -->
-        <nav></nav>
       </div>
     </div>
+    <script>
+      function hamMenu() {
+        let hamNav = document.getElementById("hamburger-menu");
+        let = hamburgerNav = document.getElementById("hamburgerNav");
+        if(hamburgerNav.style.display == "none")
+      {
+        hamburgerNav.style.display = "flex";
+      }
+      else{
+        hamburgerNav.style.display = "none";
+      }
+        
+      }
+    </script>
   </body>
 </html>
