--- a/index.html
+++ b/index.html
@@ -69,14 +69,22 @@
       .navbar li {
         display: flex;
         padding-top: 10px;
-        font-size: 18px;
+        font-size: 20px;
         font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+      .navbar li:hover {
       }
       .containeree {
-        height: 100px;
         width: 100%;
-        background-color: red;
         margin-top: 100px;
+      }
+
+      .about {
+        height: 500px;
+        width: 100%;
+        background-color: green;
       }
       /*mobile*/
       @media (max-width: 600px) {
@@ -144,7 +152,72 @@
         </nav>
       </div>
     </div>
-    <div class="containeree"></div>
+    <!--main video poster-->
+    <div class="containeree">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="./images/construction-1.jpg"
+              alt="First slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="./images/constrction-2.jpg"
+              alt="Second slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="./images/construction-3.jpg"
+              alt="Third slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="./images/constrction-4.jpg"
+              alt="fourth slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="./images/constrction-5.jpg"
+              alt="fifth slide"
+            />
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <!--about us-->
+    <div class="about"></div>
     <script>
       let hamburgerNav = document.getElementById("hamburgerNav");
       let hamNav = document.getElementById("hamburger-menu");
@@ -152,9 +225,8 @@
         //hamburger menu image cance to cancel image code
         if (hamNav.src.includes("menus.png")) {
           hamNav.src = "./images/cancel.png";
-        }
-        else{
-        hamNav.src = "./images/menus.png";
+        } else {
+          hamNav.src = "./images/menus.png";
         }
         //hamburger menu display on small phone screen code
         if (
