--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         transition: all 0.3s ease;
       }
       .navbar li:hover {
+        font-weight:600;
+        color:black;
       }
       .containeree {
         width: 100%;
