scalability added for all the screen types

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         .navbar ul {
           display: flex;
           flex-direction: column;
-          gap:20vh;
+          gap: 20vh;
           margin-top: 25px;
         }
         .containeree {
@@ -155,7 +155,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          width:95%;
+          width: 95%;
         }
         .info-card {
           height: 100%;
@@ -165,14 +165,12 @@
           justify-content: center;
           flex-direction: column;
         }
-        .about
-        {
-          height:170vh;
+        .about {
+          height: 170vh;
         }
         .phn-about-img {
-          height:230px;
-          margin:25px;
-         
+          height: 230px;
+          margin: 25px;
         }
       }
       /*tablet*/
@@ -181,20 +179,38 @@
           gap: 5vw;
           display: flex !important;
         }
-
+        .about
+        {
+          height:100vh;
+        }
         #hamburger-menu {
           display: none;
         }
         .about-img img {
-          height: 150px;
+          height:200px;
         }
+        .info-card {
+          display: none;
+        }
+        .about-poster
+        {
+          width:95%;
+        }
+
       }
       @media (min-width: 801px) and (max-width: 2000px) {
         #hamburger-menu {
           display: none;
         }
+        .about-poster
+        {
+          width:95%;
+        }
         .about-img img {
           height: 230px;
+        }
+        .info-card {
+          display: none;
         }
       }
     </style>
@@ -304,7 +320,11 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
                 illo, blanditiis, veniam a modi debitis possimus itaque totam
                 quibusdam reprehenderit mollitia alias delectus iste. Aliquid
-                mollitia minus repellat quae facere.
+                mollitia minus repellat quae facere.Lorem, ipsum dolor sit amet
+                consectetur adipisicing elit. Error illo, blanditiis, veniam a
+                modi debitis possimus itaque totam quibusdam reprehenderit
+                mollitia alias delectus iste. Aliquid mollitia minus repellat
+                quae facere.
               </td>
             </tr>
             <tr>
@@ -312,7 +332,11 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
                 illo, blanditiis, veniam a modi debitis possimus itaque totam
                 quibusdam reprehenderit mollitia alias delectus iste. Aliquid
-                mollitia minus repellat quae facere.
+                mollitia minus repellat quae facere.Lorem, ipsum dolor sit amet
+                consectetur adipisicing elit. Error illo, blanditiis, veniam a
+                modi debitis possimus itaque totam quibusdam reprehenderit
+                mollitia alias delectus iste. Aliquid mollitia minus repellat
+                quae facere.
               </td>
               <td class="about-img">
                 <img src="./images/about-us-img-1.jpg" />
@@ -333,11 +357,11 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
                 incidunt aperiam placeat earum veritatis nihil adipisci porro
                 quia laboriosam, eos eaque aliquam, ex error unde. Quam
-                perspiciatis quidem doloribus nesciunt.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-                incidunt aperiam placeat earum veritatis nihil adipisci porro
-                quia laboriosam, eos eaque aliquam, ex error unde. Quam
-                perspiciatis quidem doloribus nesciunt.
+                perspiciatis quidem doloribus nesciunt. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Quae incidunt aperiam placeat
+                earum veritatis nihil adipisci porro quia laboriosam, eos eaque
+                aliquam, ex error unde. Quam perspiciatis quidem doloribus
+                nesciunt.
               </td>
             </tr>
             <tr>
@@ -350,11 +374,11 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
                 incidunt aperiam placeat earum veritatis nihil adipisci porro
                 quia laboriosam, eos eaque aliquam, ex error unde. Quam
-                perspiciatis quidem doloribus nesciunt.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-                incidunt aperiam placeat earum veritatis nihil adipisci porro
-                quia laboriosam, eos eaque aliquam, ex error unde. Quam
-                perspiciatis quidem doloribus nesciunt.
+                perspiciatis quidem doloribus nesciunt. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Quae incidunt aperiam placeat
+                earum veritatis nihil adipisci porro quia laboriosam, eos eaque
+                aliquam, ex error unde. Quam perspiciatis quidem doloribus
+                nesciunt.
               </td>
             </tr>
           </table>
