scalability complete for all screen size

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       }
 
       .about {
-        height: 85vh;
+        height:auto;
         width: 100%;
         background-image: url(./images/constrction-engineer-communication.jpg);
         background-position: center;
@@ -110,7 +110,7 @@
         z-index: 2;
       }
       .about-img img {
-        height: 257px;
+        height:275px;
       }
       .about-poster {
         display: flex;
@@ -166,7 +166,7 @@
           flex-direction: column;
         }
         .about {
-          height: 170vh;
+          height:auto;
         }
         .phn-about-img {
           height: 230px;
@@ -181,7 +181,7 @@
         }
         .about
         {
-          height:100vh;
+          height:auto;
         }
         #hamburger-menu {
           display: none;
@@ -194,7 +194,7 @@
         }
         .about-poster
         {
-          width:95%;
+          width:100%;
         }
 
       }
@@ -207,7 +207,7 @@
           width:95%;
         }
         .about-img img {
-          height: 230px;
+          height:257px;
         }
         .info-card {
           display: none;
@@ -324,7 +324,10 @@
                 consectetur adipisicing elit. Error illo, blanditiis, veniam a
                 modi debitis possimus itaque totam quibusdam reprehenderit
                 mollitia alias delectus iste. Aliquid mollitia minus repellat
-                quae facere.
+                quae facere.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+                illo, blanditiis, veniam a modi debitis possimus itaque totam
+                quibusdam reprehenderit mollitia alias delectus iste. Aliquid
+                mollitia minus repellat quae facere.
               </td>
             </tr>
             <tr>
@@ -336,7 +339,10 @@
                 consectetur adipisicing elit. Error illo, blanditiis, veniam a
                 modi debitis possimus itaque totam quibusdam reprehenderit
                 mollitia alias delectus iste. Aliquid mollitia minus repellat
-                quae facere.
+                quae facere.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+                illo, blanditiis, veniam a modi debitis possimus itaque totam
+                quibusdam reprehenderit mollitia alias delectus iste. Aliquid
+                mollitia minus repellat quae facere
               </td>
               <td class="about-img">
                 <img src="./images/about-us-img-1.jpg" />
