--- a/index.html
+++ b/index.html
@@ -28,122 +28,14 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      .about {
-        height: auto;
-        width: 100%;
-        background-image: url(./images/constrction-engineer-communication.jpg);
-        background-position: center;
-        background-size: cover;
+      .header-1-info {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        gap: 50px;
+        margin-right: 25px;
       }
-
-      .about-poster {
-        height: 100%;
-        width: 80%;
-        background-color: rgba(255, 255, 255, 0.797);
-        text-align: center;
-      }
-
-      #aboutUsHeading {
-        color: black;
-        position: relative;
-        z-index: 2;
-      }
-      .about-img {
-        opacity: 0;
-        transform: translateX(-100%);
-        animation: slideIn 1s ease-out forwards;
-      }
-      @keyframes slideIn {
-        to {
-          transform: translateX(0);
-          opacity: 1;
-        }
-      }
-      #about-img-2 {
-        opacity: 0;
-        transform: translateX(100%);
-        animation: slideIn-2 1s ease-out forwards;
-      }
-      @keyframes slideIn-2 {
-        to {
-          transform: translateX(0);
-          opacity: 1;
-        }
-      }
-      .about-img img {
-        height: 275px;
-      }
-      .about-poster {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: column;
-      }
-      .service {
-        height: 250px;
-        width: 100%;
-        background-color: red;
-      }
-      /*mobile*/
-      @media (max-width: 600px) {
-        .containeree {
-          margin-top: 45px;
-        }
-        .about-img img {
-          height: 150px;
-        }
-        .desktop-info-table {
-          display: none;
-        }
-        .about-poster {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 95%;
-        }
-        .info-card {
-          height: 100%;
-          width: 90%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          flex-direction: column;
-        }
-        .about {
-          height: auto;
-        }
-        .phn-about-img {
-          height: 230px;
-          margin: 25px;
-        }
-      }
-      /*tablet*/
-      @media (min-width: 601px) and (max-width: 800px) {
-        .about {
-          height: auto;
-        }
-        .about-img img {
-          height: 200px;
-        }
-        .info-card {
-          display: none;
-        }
-        .about-poster {
-          width: 100%;
-        }
-      }
-      @media (min-width: 801px) and (max-width: 2000px) {
-        .about-poster {
-          width: 95%;
-        }
-        .about-img img {
-          height: 257px;
-        }
-        .info-card {
-          display: none;
-        }
+      .header-1-info img {
+        height: 20px;
+        margin: 10px;
       }
     </style>
   </head>
@@ -156,6 +48,17 @@
           onclick="hamMenu()"
           alt="manu-button"
         />
+
+        <div class="header-1-info">
+          <div>
+            <img src="./images/phone-call (1).png" /><strong>7588035979</strong>
+          </div>
+          <div>
+            <img src="./images/mail (1).png" /><strong
+              >satyamrk18@gmail.com</strong
+            >
+          </div>
+        </div>
       </div>
       <!--HEADRES AND LOGO    -->
       <div class="header-2" id="hamburgerNav">
@@ -173,7 +76,7 @@
       </div>
     </div>
     <!--main photo poster-->
-    <div class="containeree">
+    <!-- <div class="containeree">
       <div
         id="carouselExampleControls"
         class="carousel slide"
@@ -236,7 +139,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
+    </div> -->
     <!--about us-->
     <div class="about">
       <div class="about-poster">
