--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         height: 20px;
         margin: 10px;
       }
+      .line{
+        height:30px;
+        width:5px;
+        background-color:black;
+        border-radius:5px;
+      }
     </style>
   </head>
   <body>
@@ -53,6 +59,7 @@
           <div>
             <img src="./images/phone-call (1).png" /><strong>7588035979</strong>
           </div>
+          <div class="line"></div>
           <div>
             <img src="./images/mail (1).png" /><strong
               >satyamrk18@gmail.com</strong
