line color change to header color

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       .line{
         height:30px;
         width:5px;
-        background-color:black;
+        background-color: rgb(247, 207, 6);
         border-radius:5px;
       }
+      
     </style>
   </head>
   <body>
@@ -83,7 +84,7 @@
       </div>
     </div>
     <!--main photo poster-->
-    <!-- <div class="containeree">
+     <div class="containeree">
       <div
         id="carouselExampleControls"
         class="carousel slide"
