hover effect added to strong tag email and information section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
         background-color: rgb(247, 207, 6);
         border-radius:5px;
       }
-      
+      strong
+      {
+        cursor:pointer;
+        transition:all ease 0.3s;
+      }
+      strong:hover{
+        color: rgb(247, 207, 6);
+      }
     </style>
   </head>
   <body>
