--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div> -->
+    </div> 
     <!--about us-->
     <div class="about">
       <div class="about-poster">
