incremental logic complete

--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      .incremetnal-info
-      {
-        width:100%;
-        height:100px;
-        background-color:green;
+      .incremetnal-info {
+        width: 100%;
+        height: 100px;
+        background-color: green;
       }
     </style>
   </head>
@@ -74,7 +73,7 @@
       </div>
     </div>
     <!--main photo poster-->
-     <div class="containeree">
+    <div class="containeree">
       <div
         id="carouselExampleControls"
         class="carousel slide"
@@ -137,7 +136,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div> 
+    </div>
     <!--about us-->
     <div class="about">
       <div class="about-poster">
@@ -224,18 +223,10 @@
         </div>
       </div>
     </div>
-    <div class="incremetnal-info"><h1 id="incremetnal-info-num"></h1></div>
+    <div class="incremetnal-info"><h1 id="incremetnal-info-num">hii</h1></div>
     <!--service-->
     <div class="service"></div>
     <script src="./js/script.js">
-      let i = 1;
-const intervalId = setInterval(() => {
-  console.log(i);
-  if (i === 10) {
-    clearInterval(intervalId);
-  }
-  i++;
-}, 100);
     </script>
   </body>
 </html>
