projects incremental logic added

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
         </div>
       </div>
     </div>
-    <div class="incremetnal-info"><h1 id="incremetnal-info-num">hii</h1></div>
+    <div class="incremetnal-info"><h1 id="incremetnal-info-experience">hii</h1></div>
+    <div class="incremetnal-info"><h1 id="incremetnal-info-projects">hii</h1></div>
+    <div class="incremetnal-info"><h1 id="incremetnal-info-services">hii</h1></div>
     <!--service-->
     <div class="service"></div>
     <script src="./js/script.js">
