--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      .incremetnal-info {
-        width: 100%;
-        height: 100px;
-        background-color: green;
-      }
+     
     </style>
   </head>
   <body>
@@ -223,12 +219,13 @@
         </div>
       </div>
     </div>
-    <div class="incremetnal-info"><h1 id="incremetnal-info-experience">hii</h1></div>
-    <div class="incremetnal-info"><h1 id="incremetnal-info-projects">hii</h1></div>
-    <div class="incremetnal-info"><h1 id="incremetnal-info-services">hii</h1></div>
+    <div class="incremetnal-info">
+      <h2 id="incremetnal-info-experience">hii</h2>
+      <h2 id="incremetnal-info-projects">hii</h2>
+      <h2 id="incremetnal-info-services">hii</h2>
+    </div>
     <!--service-->
     <div class="service"></div>
-    <script src="./js/script.js">
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
