--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
       </div>
     </div>
     <div class="incremetnal-info">
-      <h2 id="incremetnal-info-experience"></h2>
-      <h2 id="incremetnal-info-projects"></h2>
-      <h2 id="incremetnal-info-services"></h2>
+      <p id="incremetnal-info-experience"></p>
+      <p id="incremetnal-info-projects"></p>
+      <p id="incremetnal-info-services"></p>
     </div>
     <!--service-->
     <div class="service"></div>
