service card sated creation

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <style>
-     
-    </style>
+    <style></style>
   </head>
   <body>
     <div class="header">
@@ -225,7 +223,13 @@
       <p id="incremetnal-info-services"></p>
     </div>
     <!--service-->
-    <div class="service"></div>
+    <div class="service">
+      <div class="main-service-card">
+        <div class="service-line"></div>
+        <div class="service-card"></div>
+        <div class="service-line"></div>
+      </div>
+    </div>
     <script src="./js/script.js"></script>
   </body>
 </html>
