total 4 cards created

--- a/index.html
+++ b/index.html
@@ -229,6 +229,21 @@
         <div class="service-card"></div>
         <div class="service-line"></div>
       </div>
+      <div class="main-service-card">
+        <div class="service-line"></div>
+        <div class="service-card"></div>
+        <div class="service-line"></div>
+      </div>
+      <div class="main-service-card">
+        <div class="service-line"></div>
+        <div class="service-card"></div>
+        <div class="service-line"></div>
+      </div>
+      <div class="main-service-card">
+        <div class="service-line"></div>
+        <div class="service-card"></div>
+        <div class="service-line"></div>
+      </div>
     </div>
     <script src="./js/script.js"></script>
   </body>
