scalability added to service card

--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
         <div class="service-line"></div>
       </div>
     </div>
+    <!--Projects-->
+    <div class="projects"></div>
     <script src="./js/script.js"></script>
   </body>
 </html>
