content added to service card

--- a/index.html
+++ b/index.html
@@ -226,7 +226,24 @@
     <div class="service">
       <div class="main-service-card">
         <div class="service-line"></div>
-        <div class="service-card"></div>
+        <div class="service-card">
+          <table>
+            <tr>
+              <td><img src="./images/truck.png" alt="truck image" /></td>
+            </tr>
+            <tr>
+              <td><h3>Service Name</h3></td>
+            </tr>
+            <tr>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                quisquam provident animi deserunt quidem culpa facilis amet
+                totam eligendi, adipisci suscipit deleniti minima illo omnis,
+                nesciunt ratione recusandae. Nisi, saepe.
+              </td>
+            </tr>
+          </table>
+        </div>
         <div class="service-line"></div>
       </div>
       <div class="main-service-card">
