srvice heading added

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
       <p id="incremetnal-info-services"></p>
     </div>
     <!--service-->
+    <h1 class="service-heading">Services</h1>
     <div class="service">
       <div class="main-service-card">
         <div class="service-line"></div>
