width increse in tablet view

--- a/index.html
+++ b/index.html
@@ -243,27 +243,8 @@
                 nesciunt ratione recusandae. Nisi, saepe.
               </td>
             </tr>
-          </table>
-        </div>
-        <div class="service-line"></div>
-      </div>
-      <div class="main-service-card">
-        <div class="service-line"></div>
-        <div class="service-card">
-          <table>
             <tr>
-              <td><img src="./images/truck.png" alt="truck image" /></td>
-            </tr>
-            <tr>
-              <td><h3>Service Name</h3></td>
-            </tr>
-            <tr>
-              <td>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-                quisquam provident animi deserunt quidem culpa facilis amet
-                totam eligendi, adipisci suscipit deleniti minima illo omnis,
-                nesciunt ratione recusandae. Nisi, saepe.
-              </td>
+              <td><button type="button" class="service-button">Learn More</button></td>
             </tr>
           </table>
         </div>
@@ -287,6 +268,9 @@
                 nesciunt ratione recusandae. Nisi, saepe.
               </td>
             </tr>
+            <tr>
+              <td><button type="button" class="service-button">Learn More</button></td>
+            </tr>
           </table>
         </div>
         <div class="service-line"></div>
@@ -308,6 +292,34 @@
                 totam eligendi, adipisci suscipit deleniti minima illo omnis,
                 nesciunt ratione recusandae. Nisi, saepe.
               </td>
+            </tr>
+            <tr>
+              <td><button type="button" class="service-button">Learn More</button></td>
+            </tr>
+          </table>
+        </div>
+        <div class="service-line"></div>
+      </div>
+      <div class="main-service-card">
+        <div class="service-line"></div>
+        <div class="service-card">
+          <table>
+            <tr>
+              <td><img src="./images/truck.png" alt="truck image" /></td>
+            </tr>
+            <tr>
+              <td><h3>Service Name</h3></td>
+            </tr>
+            <tr>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                quisquam provident animi deserunt quidem culpa facilis amet
+                totam eligendi, adipisci suscipit deleniti minima illo omnis,
+                nesciunt ratione recusandae. Nisi, saepe.
+              </td>
+            </tr>
+            <tr>
+              <td><button type="button" class="service-button">Learn More</button></td>
             </tr>
           </table>
         </div>
