service card images cahnges

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="service-card">
           <table>
             <tr>
-              <td><img src="./images/truck.png" alt="truck image" /></td>
+              <td><img src="./images/brickwall.png" alt="truck image" /></td>
             </tr>
             <tr>
               <td><h3>Service Name</h3></td>
@@ -280,7 +280,7 @@
         <div class="service-card">
           <table>
             <tr>
-              <td><img src="./images/truck.png" alt="truck image" /></td>
+              <td><img src="./images/wall-painting.png" alt="truck image" /></td>
             </tr>
             <tr>
               <td><h3>Service Name</h3></td>
@@ -305,7 +305,7 @@
         <div class="service-card">
           <table>
             <tr>
-              <td><img src="./images/truck.png" alt="truck image" /></td>
+              <td><img src="./images/settings.png" alt="truck image" /></td>
             </tr>
             <tr>
               <td><h3>Service Name</h3></td>
