--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="service-card">
           <table>
             <tr>
-              <td><img src="./images/truck.png" alt="truck image" /></td>
+              <td><img src="./images/building.png" alt="truck image" /></td>
             </tr>
             <tr>
               <td><h3>Service Name</h3></td>
