more service button added

--- a/index.html
+++ b/index.html
@@ -225,6 +225,17 @@
     <!--service-->
     <h1 class="service-heading">Services</h1>
     <div class="service">
+      <div class="service-info">
+        <h6>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iure
+          porro labore, fugiat consequuntur ab, aperiam nesciunt necessitatibus,
+          est harum dolor. Non corrupti vero voluptatibus temporibus quasi. Ex,
+          nam quaerat! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Omnis eligendi consequatur consectetur accusantium, nam error enim est
+          deserunt commodi ducimus, eaque facere, esse corrupti hic? Iste a
+          suscipit excepturi fugiat?
+        </h6>
+      </div>
       <div class="main-service-card">
         <div class="service-line"></div>
         <div class="service-card">
@@ -244,7 +255,9 @@
               </td>
             </tr>
             <tr>
-              <td><button type="button" class="service-button">Learn More</button></td>
+              <td>
+                <button type="button" class="service-button">Learn More</button>
+              </td>
             </tr>
           </table>
         </div>
@@ -269,7 +282,9 @@
               </td>
             </tr>
             <tr>
-              <td><button type="button" class="service-button">Learn More</button></td>
+              <td>
+                <button type="button" class="service-button">Learn More</button>
+              </td>
             </tr>
           </table>
         </div>
@@ -280,7 +295,9 @@
         <div class="service-card">
           <table>
             <tr>
-              <td><img src="./images/wall-painting.png" alt="truck image" /></td>
+              <td>
+                <img src="./images/wall-painting.png" alt="truck image" />
+              </td>
             </tr>
             <tr>
               <td><h3>Service Name</h3></td>
@@ -294,7 +311,9 @@
               </td>
             </tr>
             <tr>
-              <td><button type="button" class="service-button">Learn More</button></td>
+              <td>
+                <button type="button" class="service-button">Learn More</button>
+              </td>
             </tr>
           </table>
         </div>
@@ -319,13 +338,16 @@
               </td>
             </tr>
             <tr>
-              <td><button type="button" class="service-button">Learn More</button></td>
+              <td>
+                <button type="button" class="service-button">Learn More</button>
+              </td>
             </tr>
           </table>
         </div>
         <div class="service-line"></div>
       </div>
     </div>
+    <div class="more-service-btn"><button>More Services</button></div>
     <!--Projects-->
     <div class="projects"></div>
     <script src="./js/script.js"></script>
